# R1-Ethercat-4c

./: .gitignore  start_full_system.sh
instructions/: ENCODER_UNWRAP_POWERLOSS_RECOVERY_STEPS.md  chassis_calibration_fix_steps.md
readme/: 01_structure.md  02_quickstart.md  03_run_guide.md  04_steer_encoder.md  05_calibration.md  06_test_executables.md  07_tools.md  08_troubleshooting.md  README.md  _legacy_README_STRUCTURE.md  _legacy_RUN_GUIDE.md
src/linkx_bringup/launch/: full_system.launch.py  teleop.launch.py
src/linkx_soem_demo/: CMakeLists.txt  run_link.sh
src/linkx_soem_demo/include/linkx_soem_demo/remote/: dvc_logF710.h
src/linkx_soem_demo/include/linkx_soem_demo/vehicle_control/chariot/auto_pilot/: dvc_auto_pilot.h
src/linkx_soem_demo/include/linkx_soem_demo/vehicle_control/chariot/chassis/: crt_chassis.h  encoder_persistence.h  steer_calibration.h  steer_trace.h
src/linkx_soem_demo/include/linkx_soem_demo/vehicle_control/chariot/clamp/: crt_clamp.h
src/linkx_soem_demo/include/linkx_soem_demo/vehicle_control/chariot/manual_yaw_hold/: dvc_manual_yaw_hold.h
src/linkx_soem_demo/include/linkx_soem_demo/vehicle_control/device/Motor/: dvc_encoder.h  dvc_motor_dm.h  dvc_odrive.h
src/linkx_soem_demo/include/linkx_soem_demo/vehicle_control/device/OPS/: dvc_ops.h
src/linkx_soem_demo/include/linkx_soem_demo/vehicle_control/device/linkx4c_handler/: linkx4c_handler.h
src/linkx_soem_demo/include/linkx_soem_demo/vehicle_control/interaction/robot/: robot.h
src/linkx_soem_demo/include/linkx_soem_demo/vehicle_control/middleware/linkx/: linkx.h
src/linkx_soem_demo/launch/: run_link.sh
src/linkx_soem_demo/src/remote/: dvc_logF710.cpp  remote_node.cpp
src/linkx_soem_demo/src/test_mains/: canfd_link_test_main.cpp  clamp_position_monitor_main.cpp  clamp_telemetry_main.cpp  enc3_recover_main.cpp  enc3_set_period_main.cpp  encoder_ack_test_main.cpp  linkx_set_alias_main.cpp  motor_calib_main.cpp  odrive_calib_main.cpp  odrive_protocol_test_main.cpp  ops_test_main.cpp  robot_test_main.cpp  steer_friction_4wheel_main.cpp  steer_tuning_main.cpp
src/linkx_soem_demo/src/vehicle_control/chariot/auto_pilot/: dvc_auto_pilot.cpp
src/linkx_soem_demo/src/vehicle_control/chariot/chassis/: crt_chassis.cpp  encoder_persistence.cpp  steer_calibration.cpp  steer_trace.cpp
src/linkx_soem_demo/src/vehicle_control/chariot/clamp/: crt_clamp.cpp
src/linkx_soem_demo/src/vehicle_control/chariot/manual_yaw_hold/: dvc_manual_yaw_hold.cpp
src/linkx_soem_demo/src/vehicle_control/device/Motor/: dvc_encoder.cpp  dvc_motor_dm.cpp  dvc_odrive.cpp
src/linkx_soem_demo/src/vehicle_control/device/OPS/: dvc_ops.cpp
src/linkx_soem_demo/src/vehicle_control/device/ecat_manager/: ecat_manager.c
src/linkx_soem_demo/src/vehicle_control/device/linkx4c_handler/: linkx4c_handler.c
src/linkx_soem_demo/src/vehicle_control/device/rt_timing/: rt_timing.c
src/linkx_soem_demo/src/vehicle_control/interaction/robot/: robot.cpp
src/linkx_soem_demo/src/vehicle_control/middleware/linkx/: linkx.c
src/linkx_soem_demo/src/vehicle_control/task/task/: task.cpp
src/linkx_soem_demo/tests/: test_brt_encoder.cpp
tools/: analyze_clamp_trace.py  analyze_steer_trace.py  clamp_arm_visualizer.py  plot_feedback_wave.py  run_motor_calib.sh  run_remaining_tuning.sh  run_steer_step_test.sh  run_step_kd_sweep.sh  wheel_breakaway_scan.py
